[tool.poetry]
name = "ServiceMonitor"
version = "0.0.1"
description = "App for monitoring services."
authors = ["hound672 <hound672@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
