[tool.poetry]
name = "ServiceMonitor"
version = "0.0.1"
description = "App for monitoring services."
authors = ["hound672 <hound672@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.1"
dependency_injector = "^3.14"

[tool.poetry.dev-dependencies]
mypy = "^0.740.0"
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-pythonpath = "^0.7.3"
factory-boy = "^2.12"
wemake-python-styleguide = "^0.12.5"
ipython = "^7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
